# Pyxis_assistant

./: .env  .env.example  .gitignore  README.md  authenticate.py  list_verify.py  main.py  pyproject.toml
src/pyxis_assistant/: __init__.py  assistant.py  calendar.py  cli.py  config.py  custom_wake.py  dev_check.py  gui.py  logging_utils.py  nlp.py  profiles.py  voice.py  wake_trainer.py
